{
    "welcome": "Dobrodošli u Libry",
    "email": "Email adresa",
    "email_hint": "Vaša email adresa",
    "email_format_error": "Email adresa nije u dobrom formatu!",
    "password": "Lozinka",
    "password_hint": "Vaša lozinka",
    "password_error": "Lozinka mora da sadrži bar 6 karaktera!",
    "forgot_password": "Zaboravili ste lozinku?",
    "confirm_password": "Potvrdite lozinku",
    "confirm_password_hint": "Ponovite Vašu lozinku",
    "confirm_password_error": "Lozinke se ne podudaraju!",
    "login": "Prijavi se",
    "singup": "Registruj se",
    "singup_redirect": "Nemate nalog?",
    "singin_redirect": "Već imate nalog?",
    "email_already_in_use": "Email adresa se već koristi!",
    "invalid_credential": "Email adresa ili lozinka nisu ispravni!",
    "auth_failed": "Autentifikacija nije uspela! Molimo Vas pokušajte kasnije.",
    "reset_password_title": "Molim Vas upišite Vašu email adresu ispod i poslaćemo Vam reset link.",
    "reset_password_btn": "Pošalji reset link",
    "reset_password_success": "Poslali smo Vam email sa uputstvima kako da resetujete Vaš password. Molimo Vas proverite email sanduče.",
    "reset_password_error": "Greška prilikom slanja emaila! Molimo Vas pokušajte kasnije.",
    "go_back": "Idi nazad",
    "platforms": "Platforme",
    "platforms_empty": "Nema dostupnih platformi",
    "tab_most_popular": "Najpopularniji",
    "tab_newest": "Najnoviji",
    "search": "Pretraga",
    "search_hint": "Unesite ključnu reč da pronađete paket koji tražite.",
    "search_empty": "Nema dostupnih paketa za uneti kriterijum pretrage.",
    "libraries_error": "Greška prilikom učitavanja paketa!",
    "platforms_error": "Greška prilikom učitavanja platformi!",
    "internet_error": "Nemate pristup internetu!",
    "error": "Došlo je do greške. Pokušajte ponovo kasnije.",
    "my_account": "Moj nalog",
    "name": "Ime",
    "lastname": "Prezime",
    "logout": "Odjavite se",
    "change": "izmeni",
    "confirm_logout": "Da li ste sigurni da želite da se odjavite?",
    "yes": "Da",
    "no": "Ne",
    "theme": "Tema",
    "language": "Jezik",
    "navigation_home": "Početna",
    "navigation_favorites": "Omiljeno",
    "navigation_profile": "Nalog",
    "language_en": "Engleski",
    "language_sr": "Srpski",
    "library_details": "Detalji biblioteke",
    "license": "Licenca",
    "keywords": "Ključne reči",
    "repo_status": "Status repozitorijuma",
    "platform": "Platforma",
    "stars": "Zvezde",
    "latest_release_num": "Broj poslednjeg izdanja",
    "published_at": "Objavljeno u",
    "latest_stable_release": "Stabilno izdanje",
    "theme_system": "Sistemska tema",
    "theme_light": "Svetla tema",
    "theme_dark": "Tamna tema",
    "delete_account": "Obriši nalog",
    "confirm_delete_account": "Da li ste sigurni da želite da obrišete svoj nalog?",
    "delete_account_error": "Nije uspelo brisanje korisničkog naloga, molimo pokušajte kasnije.",
    "reauth_account_error": "Nije uspela autentifikacija, molimo pokušajte kasnije.",
    "end_of_list": "Došli ste do kraja",
    "back_history": "Nema stavki u istoriji",
    "forward_history": "Nema stavki ispred",
    "add_favorites": "Paket dodat u omiljene",
    "remove_favorites": "Paket uklonjen iz omiljenih",
    "error_favorites": "Greška prilikom ažuriranja omiljenih paketa",
    "no_favorites": "Nemate omiljene pakete!",
    "explanation_adding": "Ako želite da dodate paket u omiljene, pritisnite na ikonu srca.",
    "reauthenticate": "Autentifikujte se",
    "enter_password": "Unesite svoju lozinku da biste nastavili",
    "confirm": "Potvrdi",
    "cancel": "Otkaži",
    "wrong_password": "Pogrešna lozinka, pokušajte ponovo.",
    "too_many_requests": "Previše puta ste poslali zahtev, pokušajte ponovo kasnije.",
    "welcome_onboarding" : "Dobrodošli u Libry!",
    "onborading_title_search" : "Pronađite idealnog saradnika za kodiranje!",
    "onborading_title_details" : "Otkrijte detalje o paketu!",
    "onborading_title_favorites" : "Vaša lista favorita!",
    "onborading_description_welcome " : "Pripremite se za istraživanje sveta programskih alata! Vodićemo vas kroz raznovrstno okruženje alata predstavljajući vam osnovne pakete",
    "onborading_description_search" : "Krenite na putovanje istraživanja biblioteka uz našu intuitivnu pretragu. Brzo pronađite savršene biblioteke koje će unaprediti vaše projekte.",
    "onborading_description_details ": "Istražite detaljne informacije o paketu kako biste unapredili svoje projekte. Zaronite u detaljne opise, verzije i dodatne informacije pomoću naše funkcije detalja o paketu",
    "onborading_description_favorites " : "Jednostavno dodajte vaše preferirane biblioteke, a zatim uživajte u pristupu vašoj odabranoj listi kad god vam je potrebno."

}