...
    "theme": "Theme",
    "language": "Language",
    "navigation_home": "Home",
    "navigation_favorites": "Favorites",
    "navigation_profile": "Account",
    "language_en": "English",
    "language_sr": "Serbian",
    "library_details": "Library details",
    "license": "License",
    "keywords": "Keywords",
    "repo_status": "Repository status",
    "platform": "Platform",
    "stars": "Stars",
    "latest_release_num": "Latest release number",
    "published_at": "Published at",
    "latest_stable_release": "Latest stable release",
    "homepage": "Homepage",
    "theme_system": "System theme",
    "theme_light": "Light theme",
    "theme_dark": "Dark theme",
    "delete_account": "Delete account",
    "confirm_delete_account": "Are you sure you want to delete your account?",
    "delete_account_error": "Failed to delete user account, please try again later.",
    "reauth_account_error": "Failed to reauthenticate, please try again later.",
    "end_of_list": "You've reached the end",
...
